[pytest]
python_files=test_*.py

[metadata]
name = example-package
version = 0.1.0
description = A sample Python package
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://example.com/project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
dev =
    black
    flake8
    pytest
docs =
    sphinx
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    example-cli = example_package.cli:main

[tool:pytest]
addopts = --maxfail=5 --disable-warnings

[coverage:run]
branch = True
source = example_package

[coverage:report]
show_missing = True
skip_covered = True

[bdist_wheel]
universal = 1

[aliases]
release = sdist bdist_wheel
